codepkg/objects/Payment__c.object
<CustomObject>
    <description>It is child object of Payment Request.</description>
    <fields>
        <fullName>ActualStateAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Amount Paid.</description>
        <inlineHelpText>State Amount Paid.</inlineHelpText>
        <label>State Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountPaid__c</fullName>
        <description>Total Amount Paid in this Payment for the Project.</description>
        <inlineHelpText>Total Amount Paid in this Payment for the Project.</inlineHelpText>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CheckPaymentDate__c</fullName>
        <description>Date on which Payment has been issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on which Payment has been issued.</inlineHelpText>
        <label>Check Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckReferenceNumber__c</fullName>
        <description>Reference number of the Check through which Payment has issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference number of the Check through which Payment has issued.</inlineHelpText>
        <label>Check / Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closeout_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This self-lookup field points to the Closeout Payment due to which these individual Payments have been created per Project.</description>
        <inlineHelpText>This self-lookup field points to the Closeout Payment due to which these individual Payments have been created per Project.</inlineHelpText>
        <label>Closeout Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FederalAmountPaid__c</fullName>
        <description>Total Federal Amount Paid on this Payment.</description>
        <inlineHelpText>Total Federal Amount Paid on this Payment.</inlineHelpText>
        <label>Total Federal Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Incident Sub - Recipient Summary. Used while creating a Payment for Closeout of an Incident for a particular Sub Recipient.</description>
        <inlineHelpText>Lookup to Incident Sub - Recipient Summary. Used while creating a Payment for Closeout of an Incident for a particular Sub Recipient.</inlineHelpText>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manually_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Record is Updated Manually then this field Should be checked</description>
        <label>Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master record for this Payment record.</description>
        <inlineHelpText>Master record for this Payment record.</inlineHelpText>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>This field define\s Type of the Payment - 
Closeout Payment : Incident - Sub Recipient Closeout Payment.
Regular Payment : Regular Payment through PR.</description>
        <inlineHelpText>This field define\s Type of the Payment - 
Closeout Payment : Incident - Sub Recipient Closeout Payment.
Regular Payment : Regular Payment through PR.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Payment</fullName>
                    <default>true</default>
                    <label>Regular Payment</label>
                </value>
                <value>
                    <fullName>Closeout Payment</fullName>
                </value>
                <value>
                    <fullName>Final Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateAdminAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>State Admin Amount paid.</description>
        <inlineHelpText>State Admin Amount paid.</inlineHelpText>
        <label>State Admin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StateAmountPaid__c</fullName>
        <description>Total State Amount Paid(State+Admin).</description>
        <inlineHelpText>Total State Amount Paid(State+Admin).</inlineHelpText>
        <label>Total State Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transmittal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for final closeout</description>
        <label>Transmittal</label>
        <referenceTo>Transmittal__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Payment_State_Amount_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT( ISBLANK( Incident_Subrecipient_Summary__c ) ) , ISPICKVAL( Payment_Type__c , &apos;Closeout Payment&apos;)  ,   OR(ActualStateAmount__c &gt; 0 , StateAdminAmount__c &gt; 0) ,  OR(ActualStateAmount__c !=  Incident_Subrecipient_Summary__r.Available_State_Amount__c , StateAdminAmount__c !=  Incident_Subrecipient_Summary__r.Available_State_Admin_Amount__c ) )</errorConditionFormula>
        <errorMessage>For Closeout Payment &quot;State Amount&quot; Should be equal to &quot;Available State Amount&quot; and  &quot;State Admin Amount&quot; Should be equal to &quot;Available State Admin Amount&quot;  of Incident Sub Recipient Summary record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closeout_Federal_Amount_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT( ISBLANK( Incident_Subrecipient_Summary__c ) ) ,  ISPICKVAL( Payment_Type__c , &apos;Closeout Payment&apos;)  ,   FederalAmountPaid__c &gt; 0 , FederalAmountPaid__c !=   Incident_Subrecipient_Summary__r.Available_Federal_Amount__c   )</errorConditionFormula>
        <errorDisplayField>FederalAmountPaid__c</errorDisplayField>
        <errorMessage>For Closeout Payment &quot;Federal Amount&quot; Should be equal to &quot;Available Federal Amount&quot; of Incident Sub Recipient Summary record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closeout_Payment_Admin_Amount_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT( ISBLANK( Incident_Subrecipient_Summary__c ) ) , ISPICKVAL( Payment_Type__c , &apos;Closeout Payment&apos;)  ,  ActualStateAmount__c != 0 , ActualStateAmount__c != NULL ,  StateAdminAmount__c !=  Incident_Subrecipient_Summary__r.Available_State_Admin_Amount__c  )</errorConditionFormula>
        <errorDisplayField>StateAdminAmount__c</errorDisplayField>
        <errorMessage>For Closeout Payment &quot;State Admin Amount&quot; Should be equal to &quot;Available State Admin Amount&quot; of Incident Sub Recipient Summary record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Federal_Amount_Paid_Validation</fullName>
        <active>false</active>
        <description>Federal Amount is not Applicable for &quot;State Only&quot; Project.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
AND( ISPICKVAL( PaymentRequest__r.Project__r.FundingSource__c , &apos;State Only&apos;) , 
AND(NOT( ISBLANK(  FederalAmountPaid__c ) ), NOT( FederalAmountPaid__c == 0 ) ) 
))</errorConditionFormula>
        <errorDisplayField>FederalAmountPaid__c</errorDisplayField>
        <errorMessage>&quot;Federal Amount&quot; is not Applicable for &quot;State Only&quot; Project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative_Amount_Paid_Validation</fullName>
        <active>true</active>
        <description>&quot;Amount Paid&quot; must be Negative, When PR&apos;s Approved Payment Amount is Negative.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,  OR( AND(PaymentRequest__r.ApprovedStatePaymentAmount__c &lt; 0,  StateAmountPaid__c &gt; 0) ,AND( PaymentRequest__r.ApprovedFederalPaymentAmount__c &lt; 0,   FederalAmountPaid__c &gt; 0)) )</errorConditionFormula>
        <errorMessage>&quot;Amount Paid&quot; must be Negative, When PR&apos;s Approved Payment Amount is Negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offset_Federal_Amount_Validation</fullName>
        <active>true</active>
        <description>&quot;Federal Amount Paid&quot; must be negative amount, when PR&apos;s Payment Type is &quot;Offset&quot;.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
AND(  PaymentRequest__r.ExpenditurestoDate__c &lt; 0 , FederalAmountPaid__c &gt; 0))</errorConditionFormula>
        <errorDisplayField>FederalAmountPaid__c</errorDisplayField>
        <errorMessage>&quot;Federal Amount Paid&quot; must be a negative amount when PR&apos;s Payment Type is &quot;Offset&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Offset_State_Amount_Validation</fullName>
        <active>true</active>
        <description>&quot;State Amount Paid&quot; must be negative amount, when PR&apos;s Payment Type is &quot;Offset&quot;.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
AND( PaymentRequest__r.ExpenditurestoDate__c &lt; 0 ,  StateAmountPaid__c &gt; 0))</errorConditionFormula>
        <errorDisplayField>StateAmountPaid__c</errorDisplayField>
        <errorMessage>&quot;State Amount Paid&quot; must be a negative amount when PR&apos;s Payment Type is &quot;Offset&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Positive_Amount_Paid_Validation</fullName>
        <active>true</active>
        <description>&quot;Amount Paid&quot; must be Positive, When PR&apos;s Approved Payment Amount is Positive.</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) , OR( AND(PaymentRequest__r.ApprovedStatePaymentAmount__c &gt; 0, StateAmountPaid__c &lt; 0) ,AND( PaymentRequest__r.ApprovedFederalPaymentAmount__c &gt; 0, FederalAmountPaid__c &lt; 0)) )</errorConditionFormula>
        <errorMessage>&quot;Amount Paid&quot; must be Positive, When PR&apos;s Approved Payment Amount is Positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Regular_Payment_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Payment_Type__c , &apos;Regular Payment&apos;) , ISBLANK( PaymentRequest__c ) )</errorConditionFormula>
        <errorDisplayField>PaymentRequest__c</errorDisplayField>
        <errorMessage>&quot;Payment Request&quot; is required for the Payment Type &quot;Regular Payment&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Amount_Paid_Validation</fullName>
        <active>false</active>
        <description>State Amount is not applicable &quot;Federal Only&quot; Project..</description>
        <errorConditionFormula>AND( ISBLANK( External_Id__c ) ,
AND( ISPICKVAL( PaymentRequest__r.Project__r.FundingSource__c , &apos;Federal Only&apos;) , 
AND(NOT( ISBLANK( StateAmountPaid__c ) ), NOT( StateAmountPaid__c == 0 ) )
))</errorConditionFormula>
        <errorDisplayField>StateAmountPaid__c</errorDisplayField>
        <errorMessage>&quot;State Amount&quot; is not applicable for the &quot;Federal Only&quot; Project.</errorMessage>
    </validationRules>
</CustomObject>